[project]
name = "cyclorama"
description = "Static sites with user choices"
readme = "README.rst"
authors = [
    {name = "Ned Batchelder", email = "ned@nedbatchelder.com"},
]
license.text = "Apache-2.0"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">= 3.10"
dependencies = [
    "click",
    "Jinja2",
]
dynamic = ["version"]

[project.urls]
"Source code" = "https://github.com/nedbat/cyclorama"
"Issue tracker" = "https://github.com/nedbat/cyclorama/issues"

[project.scripts]
cyclorama = "cyclorama.cli:cli"

[tool.setuptools.dynamic]
version.attr = "cyclorama.__version__"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
